[gd_scene load_steps=13 format=3 uid="uid://ci61hs1ppmrbb"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_8s3ah"]
[ext_resource type="Script" path="res://scripts/command_processor.gd" id="2_1t0v8"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_2kw4x"]
[ext_resource type="PackedScene" uid="uid://boo6ilnbvv3v" path="res://scenes/room.tscn" id="3_4jirj"]
[ext_resource type="FontFile" uid="uid://2c4lklsj37yx" path="res://fonts/Xanmono.ttf" id="3_k8pxv"]
[ext_resource type="Script" path="res://scripts/room_manager.gd" id="3_kjrjv"]
[ext_resource type="Script" path="res://scripts/input.gd" id="4_j06qb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nxl4y"]
bg_color = Color(0.118581, 0.118581, 0.118581, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4cue"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ebuqv"]
bg_color = Color(0.313726, 0.313726, 0.313726, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cx0ev"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p1nom"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8s3ah")

[node name="Player" type="Node" parent="."]
script = ExtResource("2_2kw4x")

[node name="CommandProcessor" type="Node" parent="."]
script = ExtResource("2_1t0v8")

[node name="RoomManager" type="Node" parent="."]
script = ExtResource("3_kjrjv")

[node name="ShedRoom" parent="RoomManager" instance=ExtResource("3_4jirj")]
offset_left = 1309.0
offset_top = -192.0
offset_right = 1709.0
offset_bottom = -42.0
room_name = "a shed"
room_description = "a shed"

[node name="BackOfInnRoom" parent="RoomManager" instance=ExtResource("3_4jirj")]
offset_left = 793.0
offset_top = -189.0
offset_right = 1249.0
offset_bottom = -39.0
room_name = "the back of the inn"
room_description = "the back of the inn"

[node name="InnsKitchenRoom" parent="RoomManager" instance=ExtResource("3_4jirj")]
offset_left = 791.0
offset_top = -386.0
offset_right = 1247.0
offset_bottom = -236.0
room_name = "the inn's kitchen"
room_description = "the inn's kitchen"

[node name="InnRoom" parent="RoomManager" instance=ExtResource("3_4jirj")]
offset_left = 789.0
offset_top = -574.0
offset_right = 1245.0
offset_bottom = -424.0
room_name = "the inn"
room_description = "the inn"

[node name="InnDoorRoom" parent="RoomManager" instance=ExtResource("3_4jirj")]
offset_left = 301.0
offset_top = -574.0
offset_right = 757.0
offset_bottom = -424.0
room_name = "the inn door"
room_description = "the inn door"

[node name="VillageSquareRoom" parent="RoomManager" instance=ExtResource("3_4jirj")]
offset_left = -179.0
offset_top = -576.0
offset_right = 277.0
offset_bottom = -426.0
room_name = "the village square"
room_description = "the village square"

[node name="FieldRoom" parent="RoomManager" instance=ExtResource("3_4jirj")]
offset_left = -648.0
offset_top = -581.0
offset_right = -192.0
offset_bottom = -431.0
room_name = "a field"
room_description = "a field"

[node name="TownGateRoom" parent="RoomManager" instance=ExtResource("3_4jirj")]
offset_left = -177.0
offset_top = -774.0
offset_right = 279.0
offset_bottom = -624.0
room_name = "the town gate"
room_description = "the town gate"

[node name="ForestRoom" parent="RoomManager" instance=ExtResource("3_4jirj")]
offset_left = -182.0
offset_top = -952.0
offset_right = 274.0
offset_bottom = -802.0
room_name = "the forest"
room_description = "the forest"

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nxl4y")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GameInfo" type="PanelContainer" parent="Background/MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_v4cue")

[node name="Scroll" type="ScrollContainer" parent="Background/MarginContainer/Rows/GameInfo"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="HistoryRows" type="VBoxContainer" parent="Background/MarginContainer/Rows/GameInfo/Scroll"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/Rows"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ebuqv")

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/Rows/InputArea"]
layout_mode = 2

[node name="Caret" type="Label" parent="Background/MarginContainer/Rows/InputArea/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_k8pxv")
theme_override_font_sizes/font_size = 24
text = " > "

[node name="Input" type="LineEdit" parent="Background/MarginContainer/Rows/InputArea/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_k8pxv")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_cx0ev")
theme_override_styles/normal = SubResource("StyleBoxEmpty_p1nom")
max_length = 36
script = ExtResource("4_j06qb")

[connection signal="text_submitted" from="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" to="." method="_on_input_text_submitted"]
[connection signal="text_submitted" from="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" to="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" method="_on_text_submitted"]
